regjistrimi/style-old.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

:root {
    --primary-clr: #4E73DF;
    --secondary-clr: #e7e7e7;
    --tertiary-clr: #646464;
    --list-hover-clr: #e0e0e0;
    --input-placeholder-clr: #7e7e7e;
    --textinput-clr: #909090;
    --list-item-clr: #6a6a6a;

    /* 1.3125rem */

    --heading-size: 1.3125rem;
    --heading-weight: 400;

    --assistive-text-weight: 500;
    --assistive-text-size: 0.625rem;

    --placeholder-weight: 500;
    --placeholder-size: 0.75rem;

    --list-cname-weight: 600;
    --list-cname-size: 0.9375rem;

    --container-border-radius: 30px;
}

html {font-family: 'Montserrat', sans-serif !important;}

body {
    background-color: var(--secondary-clr);
}

h2 {
    font-size: var(--heading-size);
    font-weight: var(--heading-weight);
    margin: 0 0 .1em 1.2em; 
    padding: 0 0 .4em 0;
}

/* search bar container  */

header {
    background-color: #ffff;
}

.top-bar {
    background-color: #ffffff;
    display: flex;
    min-height: 12vh;
    align-items: center;
    overflow: hidden;
}


.search-wrapper {
    margin:0 0 0 3.4375rem;
}

.search-icon {
    max-height: 1.2rem;
}

/* page wrapper  */

.page-wrapper {
    display: grid;
    grid-template-rows: minmax(450px, auto) 80vh; 
    grid-template-columns: 100%;
}

/* regjistrimi  */

.regjistrimi-wrapper {
    margin: 2em;
    max-height: auto;
}

.form-container {
    height: 100%;
    border-radius: var(--container-border-radius);
    position: relative;
    overflow-x: hidden;
    box-shadow: 0px 9px 21px -1px rgba(0, 0, 0, 0.25);
}

.form-container::before {
    content: '';
    position: absolute;
    height: 100%;
    width: 1.5%;
    background-color: var(--primary-clr);
}

.row-margin {
    margin: 0em 3em 0em 0em;
}

.submit-margin {
    margin: 1.6em 0 0 14em;
}

.container-fluid {
    margin: 2em;
}

.mybox {
    background-color: rebeccapurple;
    margin: 1em 0 0 0;
    width: 100%;
    height: 100%;
}

.row {
    padding-bottom: 1em;
}

/* list  */

.list-wrapper {
    margin: 2em;
}

.list {
    overflow-x: scroll;
    min-height: auto;
}

table {
    border-top: 1px solid rgba(0, 0, 0, 0.25);
}

th {
    white-space: nowrap;
    padding: 2em 1em!important;
}

td {
    padding: 2em 2em !important;
    white-space: nowrap;
}

